# gherkin_reader

./: .gitignore  Cargo.toml
src/: export.rs  feature.rs  gherkin_tags.rs  main.rs  step.rs  tags.rs  tests.rs
src/err/: bad_infile.txt  bad_step.txt  both_potential_keywords_invalid.txt  data_table_bad_header.txt  inpath_not_utf8.txt  invalid_scenario.txt  target_dir_undetermined.txt
