[package]
name = "gherkin_reader"
version = "0.1.0"
authors = ["Robert Davidson <rdavidson@accusoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
glob = "0.3.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
clap = "3.0.0-beta.2"
